# scienceon-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: search.example.yaml
docs/: COLLECTION_WORKFLOW.md  PROMPTS.md  ROADMAP.md  SCIENCEON_API_GUIDE.md
mcpb/: README.md  manifest.json
src/scienceon_mcp/: __init__.py  auth.py  cli.py  client.py  config.py  exporters.py  models.py  parser.py  server.py
tests/: test_auth.py  test_client.py  test_exporters.py  test_parser.py
