[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scienceon-mcp"
version = "0.1.0"
description = "MCP server + CLI for KISTI ScienceOn OpenAPI — search and collect academic literature metadata"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yeondong Yang" }]
keywords = ["mcp", "scienceon", "kisti", "openapi", "academic", "literature", "metadata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "mcp>=1.2.0",
    "requests>=2.31.0",
    "pycryptodome>=3.20.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
scienceon-mcp = "scienceon_mcp.server:main"
scienceon = "scienceon_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/rubato103/scienceon-mcp"
Repository = "https://github.com/rubato103/scienceon-mcp"
Issues = "https://github.com/rubato103/scienceon-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scienceon_mcp"]
